--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="text_spacing">8dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
+    <dimen name="icon_size">24dp</dimen>
 </resources>
 
