--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <style name="Widget.AppTheme.MenuButton" parent="Widget.Material3.Button.IconButton">
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
         <item name="iconTint">?attr/colorControlNormal</item>
     </style>
 
@@ -9,8 +11,15 @@
         <item name="android:paddingStart">@dimen/checkbox_icon_padding</item>
     </style>
 
+
     <style name="Widget.AppTheme.LikeButton" parent="Widget.Material3.Button.TextButton.Icon">
         <item name="iconTint">@color/like_checkbox_tint</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+    </style>
+
+    <style name="Widget.AppTheme.LikeShare" parent="Widget.Material3.Button.TextButton.Icon">
+        <item name="iconTint">@color/black</item>
         <item name="android:minWidth">@dimen/icon_button_min_size</item>
         <item name="android:minHeight">@dimen/icon_button_min_size</item>
     </style>
