--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="icon_size">24dp</dimen>
     <dimen name="checkbox_icon_padding">4dp</dimen>
     <dimen name="icon_button_min_size">48dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
 
